--- a/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
@@ -14,6 +14,7 @@
 
     <Window.Resources>
         <conventers:ChangeTypeToBackgroundColorConventer x:Key="ChangeTypeToBackgroundColorConventer"/>
+        <conventers:EnumToColorConventer x:Key="EnumToColorConventer"/>
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -88,14 +89,32 @@
         <TextBlock Text="Commit A" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10"/>
         <ScrollViewer x:Name="CommitScrollViewer" Grid.Row="2" Grid.Column="1" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
             <StackPanel x:Name="TextAPanel" Grid.Column="1" Grid.Row="2" Margin="5,10,5,10">
-                <TextBlock Margin="0,10,0,10" Text="{Binding TextA}" />
+<!--                <TextBlock Margin="0,10,0,10" Text="{Binding TextA}" />
+ -->               <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextA}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Line}"
+                                       Background="{Binding Path=Color,Converter={StaticResource EnumToColorConventer}}"   
+                                />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </StackPanel>
         </ScrollViewer>
 
         <TextBlock Text="Commit B" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" Margin="0,10,0,10"/>
         <ScrollViewer Grid.Column="2" Grid.Row="2" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
             <StackPanel x:Name="TextBPanel" Grid.Column="2" Grid.Row="2" Margin="5,10,5,10">
-                <TextBlock Margin="0,10,0,10" Text="{Binding TextB}" />
+              <!--  <TextBlock Margin="0,10,0,10" Text="{Binding TextB}" />-->
+                <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextB}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Line}"
+                                       Background="{Binding Path=Color,Converter={StaticResource EnumToColorConventer}}"   
+                                />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </StackPanel>
         </ScrollViewer>
     </Grid>
