--- a/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
@@ -15,6 +15,7 @@
     <Window.Resources>
         <conventers:ChangeTypeToBackgroundColorConventer x:Key="ChangeTypeToBackgroundColorConventer"/>
         <conventers:EnumToColorConventer x:Key="EnumToColorConventer"/>
+        <conventers:AddedToDeletedStringConventer x:Key="AddedToDeletedStringConventer"/>
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -66,15 +67,17 @@
         <ScrollViewer Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
             <StackPanel x:Name="ChangesPanel">
                 <TextBlock Text="{x:Static resw:Resources.Changes}" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                <ListView ItemsSource="{Binding ChangesCollection}" SelectedItem="{Binding ChangeSelectedItem, Mode=TwoWay}" Padding="0">
+                <ListView ItemsSource="{Binding ChangesCollection}" SelectedItem="{Binding ChangeSelectedItem, Mode=TwoWay}" Padding="0" IsEnabled="True">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn x:Name="GridViewColumn" Width="100">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock x:Name="ChangeType"
-                                                   Text="{Binding Path=Key}"
+                                                   Text="{Binding Path=Key, Converter={StaticResource AddedToDeletedStringConventer}}"
                                                    Background="{Binding ElementName=ChangeType, Path=Text, Converter={StaticResource ChangeTypeToBackgroundColorConventer} }"
+                                                   Foreground="Black"
+                                                   IsEnabled="False"
                                                    />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
@@ -86,15 +89,15 @@
             </StackPanel>
         </ScrollViewer>
 
-        <TextBlock Text="Commit A" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10"/>
+        <TextBlock Text="{x:Static resw:Resources.ChildCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10"/>
         <ScrollViewer x:Name="CommitScrollViewer" Grid.Row="2" Grid.Column="1" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
             <StackPanel x:Name="TextAPanel" Grid.Column="1" Grid.Row="2" Margin="5,10,5,10">
-<!--                <TextBlock Margin="0,10,0,10" Text="{Binding TextA}" />
- -->               <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextA}">
+                <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextA}" IsEnabled="False">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Line}"
-                                       Background="{Binding Path=Color,Converter={StaticResource EnumToColorConventer}}"   
+                                       Background="{Binding Path=Color,Converter={StaticResource EnumToColorConventer}}"  
+                                       Foreground="Black"
                                 />
                         </DataTemplate>
                     </ListBox.ItemTemplate>
@@ -102,15 +105,15 @@
             </StackPanel>
         </ScrollViewer>
 
-        <TextBlock Text="Commit B" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" Margin="0,10,0,10"/>
+        <TextBlock Text="{x:Static resw:Resources.ParentCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" Margin="0,10,0,10"/>
         <ScrollViewer Grid.Column="2" Grid.Row="2" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
             <StackPanel x:Name="TextBPanel" Grid.Column="2" Grid.Row="2" Margin="5,10,5,10">
-              <!--  <TextBlock Margin="0,10,0,10" Text="{Binding TextB}" />-->
-                <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextB}">
+                <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextB}" IsEnabled="False">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Line}"
-                                       Background="{Binding Path=Color,Converter={StaticResource EnumToColorConventer}}"   
+                                       Background="{Binding Path=Color,Converter={StaticResource EnumToColorConventer}}"
+                                       Foreground="Black"
                                 />
                         </DataTemplate>
                     </ListBox.ItemTemplate>
