--- a/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
@@ -12,8 +12,7 @@
         mc:Ignorable="d"
         Title="DifferenceWindowView" Height="600" Width="900"
         DataContext="{Binding Source={StaticResource Locator}, Path=Difference}"
-        Icon="../Assets/Ratings Filled-50.png"
-        
+        Icon="../Assets/Ratings Filled-50.png" 
         >
 
     <Window.Resources>
@@ -170,10 +169,10 @@
                                        Height="18"
                                        Margin="3"
                                        Opacity="1"
-                                        Foreground="{StaticResource MyGreen}"
+                                       Foreground="{StaticResource MyGreen}"
                                        />
             <Separator/>
-            <TextBlock Text="{x:Static resw:Resources.ProgressBarText}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <TextBlock Text="{x:Static resw:Resources.DataLoadingStatus}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
 </Window>
