--- a/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
@@ -7,5 +7,7 @@
     <SolidColorBrush x:Key="MyGreen" Color="#FF52802B" />
     <SolidColorBrush x:Key="Graphite" Color="#424242" />
     <SolidColorBrush x:Key="Grey" Color="#FAFAFA" />
-    
+    <SolidColorBrush x:Key="GitOrange" Color="#F34F29"/>
+    <SolidColorBrush x:Key="SvnBlue" Color="#809CC8"/>
+
 </ResourceDictionary>
